@@ -13,6 +13,8 @@ Verilator 5.037 devel
 
 **Other:**
 
+* Fix sign extension of signed compared with unsigned case items (#5968).
+
 
 Verilator 5.036 2025-04-27
 ==========================
